Made changes to Library being used and downloading options

--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -359,7 +359,13 @@
         }
 
         function DownloadGradeLevel(grade) {
-
+            console.log(grade);
+            $.ajax({
+                url: '/Admin/DownloadGradeLevel',
+                type: 'POST',
+                cache: false,
+                data: { "grade": grade }
+            });
         }
 
     </script>
