--- a/Views/Admin/Dashboard.cshtml
+++ b/Views/Admin/Dashboard.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Admin Dashboard";
 }
 <div class="row">
-    <div class="col-3">
+    <div class="col-sm-1">
         <div class="nav flex-column nav-pills" id="v-pills-tab" aria-orientation="vertical">
             <ul class="nav navbar-nav" role="tablist">
                 <li class="nav-item">
