--- a/Views/Shared/_ViewStudentsPartial.cshtml
+++ b/Views/Shared/_ViewStudentsPartial.cshtml
@@ -56,6 +56,7 @@
                     }
                 </div>
             </div>
+            <button class="btn-primary" type="button" onclick="DownloadByHomeroom()">Download By Homeroom</button>
         </div>
     </div>
 </div>
