Print By Homeroom Functioning

--- a/Views/Admin/_UploadFilesPartial.cshtml
+++ b/Views/Admin/_UploadFilesPartial.cshtml
@@ -29,7 +29,7 @@
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload ClassLink QR File:</p>
-                <input type="file" name="classLinkFiles" single id="classLinkInput"/>
+                <input type="file" name="classLinkFiles" multiple id="classLinkInput"/>
             </div>
         </div>
         <div class="form-group">
