--- a/wwwroot/css/MiddleStyleSheet.css
+++ b/wwwroot/css/MiddleStyleSheet.css
@@ -10,7 +10,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: white;
+    background: white;
     flex-direction: row;
     flex-flow: wrap;
 
@@ -21,7 +21,6 @@
     width: 250px;
     border-radius: 10px;
     position: relative;
-   
 }
 
 .back {
@@ -29,7 +28,7 @@
     width: 250px;
     border-radius: 10px;
     position: relative;
-    background-color: white;
+    
     top: 30px;
 }
 
@@ -45,14 +44,13 @@
 .middle {
     height: 40%;
     width: 250px;
-    background-color: white;
+    
     position: relative;
 }
 
 .middle img{
     object-fit: contain;
-    top: 10px;
-    bottom: 10px;
+    top: 5px;
     height: 85%;
     
     left: 70px;
@@ -62,7 +60,7 @@
 .bottom {
     height: 25%;
     width: 250px;
-    background-color: white;
+    
     position: relative;
     /*border-bottom-left-radius: 15px;*/
     /*border-bottom-right-radius: 15px;*/
@@ -71,7 +69,7 @@
     height: 10%;
     width: 250px;
     position: relative;
-    background-color: white;
+    
 }
 
 .bottom p {
@@ -79,7 +77,7 @@
     text-align: center;
     text-transform: capitalize;
     font-weight: bold;
-    font-size: 24px;
+    font-size: 18px;
     /*padding: 5px;*/
 }
 
@@ -101,6 +99,7 @@
     font-weight: bold;
     text-align: center;
     position: relative;
+    
 }
 
 .bottom .barcode{
@@ -112,7 +111,7 @@
     height: 60px;
     width: 60px;
     
-    border-radius: 10px;
+    
     position: absolute;
     top: 30px;
     left: 95px;
