--- a/Views/Shared/_ViewStudentsPartial.cshtml
+++ b/Views/Shared/_ViewStudentsPartial.cshtml
@@ -39,27 +39,27 @@
                 <div class="dropdown-menu" aria-labelledby="downloaddropdownmeny">
                     @using (Html.BeginForm("DownloadGradeLevel", "Admin", FormMethod.Post))
                     {
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('PK')">Pre-K</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('KG')">Kindergarden</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="PK">PK</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="KG">KG</button>
                         <button class="dropdown-item" type="submit" name="grade" value="01">1st</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('02')">2nd</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('03')">3rd</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('04')">4th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('05')">5th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('06')">6th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('07')">7th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('08')">8th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('09')">9th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('10')">10th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('11')">11th</button>
-                        <button class="dropdown-item" type="button" onclick="DownloadGradeLevel('12')">12th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="02">2nd</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="03">3rd</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="04">4th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="05">5th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="06">6th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="07">7th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="08">8th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="09">9th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="10">10th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="11">11th</button>
+                        <button class="dropdown-item" type="submit" name="grade" value="12">12th</button>
                     }
                 </div>
             </div>
             @using (Html.BeginForm("DownloadByHomeroom", "Admin", FormMethod.Post))
             {
                 <div>
-                    <button type="submit" class="btn btn-success"><i class='fa fa-file'>Download</i></button>
+                    <button type="submit" class="btn btn-primary">Download Homerooms</button>
                 </div>
             }
         </div>
@@ -87,6 +87,9 @@
                         QR Code:
                     </th>
                     <th>
+                        ID Photo:
+                    </th>
+                    <th>
                         Homeroom Teacher:
                     </th>
                     <th>
@@ -94,7 +97,10 @@
                         <i class="bi bi-sort-up"></i>
                     </th>
                     <th>
-                        Action
+                        Download ID:
+                    </th>
+                    <th>
+                        Download Qr:
                     </th>
                 </tr>
             </thead>
@@ -118,6 +124,16 @@
                             @Html.DisplayFor(modelItem => item.QrCode)
                         </td>
                         <td>
+                            @if (item.IdPicPath != null)
+                            {
+                                <p>Uploaded</p>
+                            }
+                            else
+                            {
+                                <p>N/A</p>
+                            }
+                        </td>
+                        <td>
                             @Html.DisplayFor(modelItem => item.HomeRoomTeacher)
                         </td>
                         <td>
@@ -128,9 +144,18 @@
                             {
                                 @using (Html.BeginForm("SaveID", "Admin", FormMethod.Post))
                                 {
-                                    <div>
-                                        <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download</i></button>
-                                    </div>
+                                    @if (item.IdPicPath == null)
+                                    {
+                                        <div>
+                                            <button type="submit" class="btn btn-success" name="id" value="@item.ID" disabled><i class='fa fa-file'>Download ID</i></button>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download ID</i></button>
+                                        </div>
+                                    }
                                 }
                             }
                             else
@@ -146,6 +171,26 @@
                                     <div>
                                         <button type="submit" class="btn btn-danger" disabled name="id" onclick="RequestIdPrint(@item.ID, this)"><i class='fa fa-file'>Request Print</i></button>
                                     </div>
+                                }
+                            }
+                        </td>
+                        <td>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                @using (Html.BeginForm("DownloadQrCode", "Admin", FormMethod.Post))
+                                {
+                                    @if (item.QrCode == null)
+                                    {
+                                        <div>
+                                            <button type="submit" class="btn btn-success" name="id" value="@item.ID" disabled><i class='fa fa-file'>Download QR</i></button>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div>
+                                            <button type="submit" class="btn btn-success" name="id" value="@item.ID"><i class='fa fa-file'>Download QR</i></button>
+                                        </div>
+                                    }
                                 }
                             }
                         </td>
