--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <div class="form-group">
+    <!--<div class="form-group">
         <form id="account" method="post">
             <input asp-for="Input.Email" class="input-field" placeholder="username" />
             <span asp-validation-for="Input.Email" class="text-danger"></span>
@@ -16,8 +16,8 @@
             <input type="submit" style="" value="login" />
         </form>
         
-    </div>
-        <!--<div class="col-md-4">
+    </div> -->
+        <div class="col-md-4">
          <section>
              <form id="account" method="post">
                  <h4>Use a local account to log in.</h4>
@@ -81,7 +81,7 @@
                      }
                  }
              </section>
-         </div>-->
+         </div>
     
     </div>
 
