--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -73,7 +73,7 @@
                                  <p>
                                      @foreach (var provider in Model.ExternalLogins)
                                      {
-                                         <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+                                         <button type="submit"  name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account"><img src="~/Images/ms-symbollockup_signin_dark.png" /></button>
                                      }
                                  </p>
                              </div>
