--- a/wwwroot/css/login.css
+++ b/wwwroot/css/login.css
@@ -1,69 +1,19 @@
 ﻿body {
     font-family: "Helvetica Neue", "Open sans", sans-serif;
-    background-color: gray;
-    background: -webkit-linear-gradient(top left, #c31432, #240b36);
-    color: white;
+    background-image: url("../Images/new_cut_background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-.form-group {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.eagletree {
+    height: 125px;
+    width: 125px;
 }
 
-form input {
-    display: block;
-    margin-bottom: 10px;
-    font-size: 1.3em;
-    padding: 10px;
-    color: #fff;
-    background-color: transparent;
-    border: 0;
-    border-bottom: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 4px;
-    font-weight: 300;
-    outline: none;
-    font-weight: 100;
-    letter-spacing: 4px;
-    margin-left: 10px;
-    max-width: 350px;
+.card{
+    background-color: rgba(255,255,255,0.1);
 }
 
-input .input-field {
-    border: 1px solid black;
+.azurebutton{
+    background-size: cover;
 }
-
-form input:hover, form input:focus {
-    border-bottom: 2px solid rgba(255, 255, 255, .9);
-    /border-radius: 5%;
-}
-
-form input::placeholder {
-    color: #d3d1d3;
-    font-weight: 100;
-    letter-spacing: 4px;
-    margin-left: 10px;
-}
-
-input[type="submit"] {
-    margin: 40px auto;
-    border: 1px solid white;
-    display: bl;
-    width: 100px;
-}
-
-    input[type="submit"]:hover {
-        border: 1px solid white;
-        display: bl;
-        width: 100px;
-    }
-
-.form-group p {
-    margin-top: 10px;
-    text-align: right;
-}
-
-    .form-group p a {
-        color: rgb(225, 225, 225);
-    }
